--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container mx-5 my-5">
         <div class="row">
             <div class="col-lg-6">
-                <p><h2>We are in ean business from more
+                <p><h2>We are in Cleaning business from more
 
                     than 35 years. PTK cleaning oy is specialist in industrial, hotel, ships cleaning
                     
