--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
                     <br>
                     <br>
                     <br>
-                    <h1 class="text-dark">OPEN APPLICATIONS</h1>
-                    <h2 class="text-dark">OPEN POSITIONS</h2>
+                    <button type="button" class="text-dark">OPEN APPLICATIONS</button>
+                    <button type="button" class="text-dark">OPEN POSITIONS</button>
+
             </div>
             <div class="col-lg-6">
                 <img src="23901712.jpg" style="width: inherit;" alt="Description of the image"> 
